# XPokerEquity

./: CMakeLists.txt  README.md  XPokerEquity.sln
.github/workflows/: main-ci.yml
Poker.Equity/: AgnosticHand.cpp  Card.cpp  Card.h  CardConverter.cpp  HoldemCalculator.cpp  HoldemCalculator.h  HoldemHandDistribution.cpp  HoldemHandDistribution.h  PGTRACE.CPP  PGTRACE.H  Poker.Equity.cpp  Poker.Equity.h  Poker.Equity.vcproj  Poker.Equity.vcxproj  ReadMe.txt  dllmain.cpp  stdafx.cpp  stdafx.h  targetver.h
Poker.Equity.Test/: Poker.Equity.Test.cpp  Poker.Equity.Test.vcproj  Poker.Equity.Test.vcxproj  ReadMe.txt  stdafx.cpp  stdafx.h  targetver.h
Poker.PokerEval/: CMakeLists.txt  ChangeLog  mktab_astud.vcproj  mktab_basic.vcproj  mktab_evx.vcproj  mktab_joker.vcproj  mktab_lowball.vcproj  mktab_packed.vcproj  poker-eval.vcproj  poker-eval.vcxproj
Poker.PokerEval/examples/: CMakeLists.txt
Poker.PokerEval/lib/: CMakeLists.txt  t_astudcardmasks.c  t_cardmasks.c  t_jokercardmasks.c  t_maskrank.c
Poker.PokerEval/tests/: CMakeLists.txt  poker_wrapper.c  razz.c
